[package]
name = "pallet-instrumental-strategy-default"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "TBD"
homepage.workspace = true
license.workspace = true

[dependencies]
# FIXME(saruman9): inheriting a `package` field from a workspace doesn't work
codec = { workspace = true, package = "parity-scale-codec" }
frame-support.workspace = true
frame-system.workspace = true
scale-info.workspace = true
sp-arithmetic.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

composable-traits.workspace = true

traits = { path = "../traits", default-features = false }

[dev-dependencies]

[features]
default = ["std"]
std = [
  "codec/std",
  "composable-traits/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]

runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
