[package]
name = "pallet-instrumental-strategy"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "TBD"
homepage.workspace = true
license.workspace = true

[dependencies]
# FIXME(saruman9): inheriting a `package` field from a workspace doesn't work
codec = { workspace = true, package = "parity-scale-codec" }
frame-support.workspace = true
frame-system.workspace = true
scale-info.workspace = true
sp-arithmetic.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

composable-traits.workspace = true

log.workspace = true
serde = { workspace = true, optional = true }

traits = { path = "../traits", default-features = false }

[dev-dependencies]
orml-tokens.workspace = true
orml-traits.workspace = true
pallet-balances.workspace = true
pallet-collective.workspace = true
pallet-timestamp.workspace = true

pallet-assets.workspace = true
pallet-currency-factory.workspace = true
pallet-governance-registry.workspace = true
pallet-pablo.workspace = true
pallet-staking-rewards.workspace = true
pallet-vault.workspace = true
primitives.workspace = true

pallet-instrumental-strategy-pablo = { path = "../instrumental-strategy-pablo", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "composable-traits/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "orml-tokens/std",
  "orml-traits/std",
  "pallet-collective/std",
  "primitives/std",
  "scale-info/std",
  "serde/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]

runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
]
