[package]
name = "pallet-instrumental"
authors = ["Kevin@composable.finance", "Composable Developers"]
description = "TBD"
version = "0.1.0"
license = "Unlicense"
homepage = "https://instrumental.finance"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
scale-info = { version = "2", default-features = false, features = ["derive"] }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }

composable-support = { git = "https://github.com/composableFi/composable", rev = "08fc9fe3", default-features = false }
composable-traits = { git = "https://github.com/composableFi/composable", rev = "08fc9fe3", default-features = false }

log = { version = "0.4", default-features = false }
serde = { version = '1', optional = true }

traits = { path = "../traits", default-features = false }

[dev-dependencies]
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "377213f7", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "377213f7", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }

pallet-assets = { git = "https://github.com/composableFi/composable", rev = "08fc9fe3", default-features = false }
pallet-currency-factory = { git = "https://github.com/composableFi/composable", rev = "08fc9fe3", default-features = false }
pallet-governance-registry = { git = "https://github.com/composableFi/composable", rev = "08fc9fe3", default-features = false }
pallet-pablo = { git = "https://github.com/composableFi/composable", rev = "08fc9fe3", default-features = false }
pallet-staking-rewards = { git = "https://github.com/composableFi/composable", rev = "08fc9fe3", default-features = false }
pallet-vault = { git = "https://github.com/composableFi/composable", rev = "08fc9fe3", default-features = false }
primitives = { git = "https://github.com/composableFi/composable", rev = "08fc9fe3", default-features = false }

hex-literal = "0.3"
itertools = "0.10"
proptest = "1"

pallet-instrumental-strategy = { path = "../instrumental-strategy", default-features = false }
pallet-instrumental-strategy-pablo = { path = "../instrumental-strategy-pablo", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "composable-support/std",
  "composable-traits/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "orml-tokens/std",
  "orml-traits/std",
  "pallet-balances/std",
  "pallet-collective/std",
  "pallet-vault/std",
  "primitives/std",
  "scale-info/std",
  "serde/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]

runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
]
