[package]
name = "traits"
authors = ["Composable Developers"]
description = "TBD"
version = "0.1.0"
license = "Unlicense"
homepage = "https://instrumental.finance"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
scale-info = { version = "2", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "scale-info/std",
  "sp-runtime/std",
]
