[package]
name = "traits"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Traits for Instrumental Pallet"
homepage.workspace = true
license.workspace = true

[dependencies]
# FIXME(saruman9): inheriting a `package` field from a workspace doesn't work
codec = { workspace = true, package = "parity-scale-codec" }
frame-support.workspace = true
scale-info.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "scale-info/std",
  "sp-runtime/std",
]
